Corrected bugs in UserController
